--- a/mystyles.css
+++ b/mystyles.css
@@ -39,7 +39,7 @@ display: block; margin: 0; padding: 0;
 }
 
 	/* header */
-	#inner_header { padding-bottom: 0.2em; }
+	#inner_header { padding-bottom: 0.2em;  }
 	#inner_header h1 { padding: 1.5em 0.35em 0.6em 0.5em; }
 	#inner_header h2 {float: right;	padding: 2.0em 0.20em 0m 0em; }
 	/* navigation */
@@ -62,5 +62,46 @@ td, th {
 /* */
 .tab { margin-left: 40px; }
 /* */
+
+.sidenav {
+  margin-top: 200px;
+  height: 100%;
+  width: 300px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+.sidenav a {
+  padding: 6px 8px 6px 0px;
+  font-size: 15px;}
+
+.sidenav ul li { list-style-type: none; float: bottom; margin: 0em 0em 0em 0em; }
+
+
+
+.main {
+  margin-top: 200px;
+  margin-left: 300px; /* Same as the width of the sidenav */
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+
+.homemain {
+  margin-top: 200px;}
+
+.topnav {
+  position: fixed;
+  top: 0;
+  width: 100%;
+    background-color: #FFFFFF;
+
+  }
 
 /* end of css - */
