--- a/mystyles.css
+++ b/mystyles.css
@@ -40,7 +40,7 @@ display: block; margin: 0; padding: 0;
 
 	/* header */
 	#inner_header { padding-bottom: 0.2em;  }
-	#inner_header h1 { padding: 1.5em 0.35em 0.6em 0.5em; }
+	#inner_header h1 { }
 	#inner_header h2 {float: right;	padding: 2.0em 0.20em 0m 0em; }
 	/* navigation */
 	#inner_header ul { list-style-type: none; padding: 0.2em 0em 0.2em 0.4em; display:inline; text-align:center; }
