--- a/mystyles.css
+++ b/mystyles.css
@@ -53,7 +53,7 @@ td, th {
 .tab { margin-left: 40px; }
 /* */
 
-body { margin: 0; padding: 0}
+body { margin: 10px; padding: 0}
 
 .sidenav {
   margin-top: 200px;
